--- a/src/main/resources/eu/andreatt/proyecto1_dein/fxml/AgregarEvento.fxml
+++ b/src/main/resources/eu/andreatt/proyecto1_dein/fxml/AgregarEvento.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/22.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.andreatt.proyecto1_dein.controllers.AgregarEventoController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.andreatt.proyecto1_dein.controllers.AgregarEventoController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
@@ -37,14 +37,10 @@
          </GridPane.margin>
       </Label>
       <Button fx:id="botonGuardar" alignment="CENTER" defaultButton="true" mnemonicParsing="false" onAction="#actionGuardar" prefHeight="50.0" prefWidth="130.0" styleClass="botonGuardar" stylesheets="@../css/application.css" text="%botonGuardar" GridPane.halignment="CENTER" GridPane.rowIndex="3">
-         <graphic>
-            <FontIcon iconLiteral="fas-save" />
-         </graphic>
+
       </Button>
       <Button fx:id="botonCancelar" alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#actionCancelar" prefHeight="50.0" prefWidth="130.0" styleClass="botonCancelar" stylesheets="@../css/application.css" text="%botonCancelar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
-         <graphic>
-            <FontIcon iconLiteral="fas-save" />
-         </graphic>
+
       </Button>
       <ComboBox fx:id="comboOlimpiadas" prefWidth="220.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <GridPane.margin>
@@ -56,10 +52,10 @@
             <Insets left="140.0" />
          </GridPane.margin>
       </ComboBox>
-      <ComboBox fx:id="comboNombres" prefWidth="220.0" GridPane.columnSpan="2">
+      <TextField fx:id="comboNombres" prefWidth="220.0" GridPane.columnSpan="2">
          <GridPane.margin>
-            <Insets left="140.0" />
+            <Insets left="140.0" right="35.0" />
          </GridPane.margin>
-      </ComboBox>
+      </TextField>
    </children>
 </GridPane>
